# CMakeList.txt : CMake project for MoveballTest, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("MoveballTest")

# Add source to this project's executable.
add_executable (MoveballTest "MoveballTest.cpp" "MoveballTest.h")

# TODO: Add tests and install targets if needed.
